# Bigrams-trigrams-Parallel-Computing

./: README.md
BigramsTrigrams/: BigramsTrigrams  CMakeLists.txt  CharacterNgrams.cpp  CharacterNgrams.h  Utils.cpp  Utils.h  WordNgrams.cpp  WordNgrams.h  clean_ascii.txt  main.cpp  plot_ngrams.py  plot_scaling.py
